...
            "state" : "translated",
            "value" : "Fecha de creación"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
...
            "state" : "translated",
            "value" : "Ingrese los detalles del trabajo aquí"
          }
        }
      }
    },
    "Enter the job title here." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the job title here."
          }
...
            "state" : "translated",
            "value" : "Ingrese el título del trabajo aquí."
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Filtrar"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
          }
...
            "state" : "translated",
            "value" : "Filtros"
          }
        }
      }
    },
    "Jobs" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Jobs"
          }
...
            "state" : "translated",
            "value" : "Empleos"
          }
        }
      }
    },
    "Locked" : {
      "comment" : "Award is locked",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locked"
...
            "state" : "translated",
            "value" : "Nueva solicitud de empleo"
          }
        }
      }
    },
    "New Job Application" : {

    },
    "New Name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "No aplicado"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Busque o escriba # para agregar etiquetas"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show awards"
          }
...
